# robotmodels

./: .gitignore  README.md  pyproject.toml
examples/: fk_example.py  local_urdf.py  readme_example.py  visualize_urdf.py
examples/model/urdf/: panda.urdf
examples/panda/: home.txt  panda_home.txt  panda_with_gripper_home.txt
examples/panda/urdf/: panda_collision_links.urdf  panda_with_gripper.urdf
examples/panda/xml/: panda.xml
robotmodels/albert/urdf/: albert.urdf
robotmodels/aloha/: aloha_scene_home.txt
robotmodels/aloha/xml/: aloha.xml  aloha_scene.xml  joint_position_actuators.xml
robotmodels/boxer/urdf/: boxer.urdf
robotmodels/dingo_kinova/urdf/: dingo_kinova.urdf  dingo_kinova_gripper.urdf  dingo_kinova_original.urdf
robotmodels/dingo_kinova/xml/: dingo_kinova.xml  dingo_kinova_gripper.xml
robotmodels/iiwa7/urdf/: iiwa7.urdf
robotmodels/kinova/urdf/: gen3_6dof.urdf  gen3_7dof.urdf  gen3lite.urdf
robotmodels/kinova/xml/: gen3_6dof.xml  gen3_7dof.xml  gen3lite.xml
robotmodels/kinova_gen3lite/urdf/: kinova_gen3lite.urdf
robotmodels/mobilePanda/urdf/: mobilePanda.urdf  mobilePanda_with_gripper.urdf
robotmodels/nlink/xml/: nlink_2.xml
robotmodels/panda/xml/: panda.xml  panda_with_gripper.xml  panda_without_gripper.xml
robotmodels/pointRobot/xml/: pointRobot.xml
robotmodels/prius/urdf/: prius.urdf
robotmodels/scripts/: visualize_urdf.py
robotmodels/tiago/urdf/: tiago.urdf
robotmodels/ur5/: ur5_home.txt
robotmodels/ur5/urdf/: ur5.urdf
robotmodels/utils/: robotmodel.py
tests/: test_robot_model.py
(+1 files in other folders)
