[tool.poetry]
name = "robotmodels"
version = "0.2.0"
description = "A collection of robot models"
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
yourdfpy = {version = "^0.0.56", extras = ["full"]}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.scripts]
visualizeurdf = "robotmodels.scripts.visualize_urdf:visualize_urdf"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
